--- a/alirezamashayekhi.html
+++ b/alirezamashayekhi.html
@@ -302,7 +302,7 @@
                  
             
                 </div>
-                <a class="btn destination__btn" href="#viewAll" >نمایش همه محصولات</a>
+                <a class="btn destination__btn" href="alirezamashayekhi-shop.html" >نمایش همه محصولات</a>
             </section>
 
             <section class="newslatter">
